--- a/frontend/clay/src/elements/Walls/SimpleWall/index2.html
+++ b/frontend/clay/src/elements/Walls/SimpleWall/index2.html
@@ -125,15 +125,15 @@
 
   // Set up GUI
 
-  const gui = new dat.GUI();
+ // const gui = new dat.GUI();
 
-  gui.add(walls.startPoint, "x").name("Start X").step(0.1).onChange(() => {
-     walls.update(true);
-  });
+ // gui.add(walls.startPoint, "x").name("Start X").step(0.1).onChange(() => {
+ //    walls.update(true);
+ // });
 
-  gui.add().name("Start Y").onChange(() => {
-     console.log("B<")
-  });
+ // gui.add().name("Start Y").onChange(() => {
+ //    console.log("B<")
+ // });
 
   // gui.add(wall.endPoint, "x").name("End X").min(-5).max(5).step(0.1).onChange(() => {
   //   wall.update();
