--- a/frontend/openCvTool/index.html
+++ b/frontend/openCvTool/index.html
@@ -5,7 +5,7 @@
 <title>Hello OpenCV.js</title>
 </head>
 <body>
-<h2>Hello OpenCV.js</h2>
+<h2>Img uploader</h2>
 <div>
   <div class="inputoutput">
     <img id="imageSrc" alt="No Image" />
